# mcp-server-script-podcast

./: .gitignore  DEPLOYMENT_GUIDE.md  HEADLINE_CHANGES_SUMMARY.md  MCP_SERVER_GUIDE.md  PODCAST_GENERATION_GUIDE.md  README_ALPIC.md  alpic_config.py  example_podcast_generation.py  generate_podcast.py  generate_script.py  headline_examples.md  main.py  pyproject.toml  requirements.txt  script_1706.03762.txt  test_deployment.py  test_mcp.py
