[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "black>=25.1.0",
    "mcp",
    "python-dotenv>=1.1.0",
    "openai>=1.99.1",
    "instructor>=1.10.0",
    "requests>=2.31.0",
    "pydantic>=2.11.5",
    # Audio processing for podcast generation
    "soundfile>=0.13.1",
    "numpy>=1.24.0",
    "elevenlabs>=2.1.0",
    "kokoro>=0.9.4",
]
